--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
 <script type="text/javascript">
 
-  var spec2 = "aus_map.json";
-  vegaEmbed('#aus_map', spec2).then(function(result) {
+  var spec = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/aus_map.json";
+  vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
-</script>
 
 </body>
 </html>
