--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
+</script>
 </body>
 </html>
