--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   
   <!-- CSS file -->
-  <!--link rel="stylesheet" type="text/css" href="css/styles.css" media="all"-->
+  <link rel="stylesheet" type="text/css" href="style.css" media="all">
   
 </head>
 <body>
@@ -18,7 +18,7 @@
 <script type="text/javascript">
 
   var spec = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/aus_map.json";
-  vegaEmbed('#vis', spec).then(function(result) {
+  vegaEmbed('#aus_map', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
