--- a/index.html
+++ b/index.html
@@ -17,16 +17,25 @@
   
   <h2>Visualisation 2</h2>
   <div id="bar_chart"></div>
+  
+  <h3>Visualisation 3</h3>
+  <div id="world_map"></div>
 
 <script type="text/javascript">
 
   var spec = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/aus_map.json";
   var spec1 = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/bar_chart.json";
+  var spec2 = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/world_map.json";
+  
   vegaEmbed('#aus_map', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
   vegaEmbed('#bar_chart', spec1).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  vegaEmbed('#world_map', spec1).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
