--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   
 </head>
 <body>
-  <h1>Visualisation 1</h1>  
+  <h1> How Educated is Australia?</h1>
+  <h2>Visualisation 1</h2>  
 <div id="aus_map"></div>
   
   <h2>Visualisation 2</h2>
   <div id="bar_chart"></div>
   
-  <h3>Visualisation 3</h3>
+  <h2>Visualisation 3</h2>
   <div id="world_map"></div>
 
 <script type="text/javascript">
