--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
   var spec = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/aus_map.json";
   var spec1 = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/bar_chart.json";
   var spec2 = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/world_map.json";
+  var spec3 = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/line_chart.json";
   
   vegaEmbed('#aus_map', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
   vegaEmbed('#bar_chart', spec1).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  vegaEmbed('#bar_chart', spec3).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
