--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   <h2>Visualisation 2</h2>
   <div id="bar_chart"></div>
   
-  <h2>Visualisation 3</h2>
+    <h2>Visualisation 3</h2>
+  <div id="line_chart"></div>
+  
+  <h2>Visualisation 4</h2>
   <div id="aus_map"></div>
 
 <script type="text/javascript">
@@ -37,7 +40,7 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
-  vegaEmbed('#bar_chart', spec3).then(function(result) {
+  vegaEmbed('#line_chart', spec3).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
