--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <div id="world_map"></div>
   
   <h2>Visualisation 2</h2>
-  <div id="bar_chart"></div>
+  <div id="bar_chart"></div> <div id="line_chart"></div>
   
     <h2>Visualisation 3</h2>
-  <div id="line_chart"></div>
+  
   
   <h2>Visualisation 4</h2>
   <div id="aus_map"></div>
