--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   
 </head>
 <body>
-  <h1> How Tertiary Educated is Australia?</h1>
-  <h2>Visualisation 1</h2>  
+  <h1>Tertiary Education in Australia?</h1>
+  <h2>How does Australias Tertiary Education Rate compare with the rest of the World</h2>  
 <div id="world_map"></div>
   
-  <h2>Visualisation 2</h2>
+  <h2>How has Australian Tertiary Education Increased and Does Education Expenditure Influence Tertiary Qualification Levels</h2>
   <div id="line_chart"></div> <div id="scatter_plot"></div>
   
-    <h2>Visualisation 3</h2>
+    <h2>Raw Numbers of Tertiary Qualififcations across Australia</h2>
   <div id="bar_chart"></div>
   
-  <h2>Visualisation 4</h2>
+  <h2>Standardised Numbers of Tertiary Qualifications across Australia</h2>
   <div id="aus_map"></div>
 
 <script type="text/javascript">
