--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="style.css" media="all">
   
 </head>
-<body style="background-color:#EBFFE0>
+<body style="background-color:#EBFFE0;">
   <h1>Tertiary Education in Australia?</h1>
   <h2>How does Australias Tertiary Education Rate compare with the rest of the World</h2>  
 <div id="world_map"></div>
