--- a/index.html
+++ b/index.html
@@ -13,18 +13,26 @@
 </head>
 <body style="background-color:#F5FFEA;">
   <h1>Tertiary Education in Australia?</h1>
-  <h2>How does Australias Tertiary Education Rate compare with the rest of the World</h2>  
+  <h2>How does Australia's Tertiary Education Rate Compare with the rest of the World</h2>  
 <div id="world_map"></div>
-  
+  <p>
+As can been seen in the above map Australia's tertiary education rate is amongst the best in the world!
+</p>
   <h2>How has Australian Tertiary Education Increased and Does Education Expenditure Influence Tertiary Qualification Levels</h2>
   <div id="line_chart"></div> <div id="scatter_plot"></div>
-  
+    <p>
+Australia's tertiary education levels have continued to increase through the years like many major countries whilst also investing heavily into education industry.
+</p>
     <h2>Raw Numbers of Tertiary Qualififcations across Australia</h2>
   <div id="bar_chart"></div>
-  
+    <p>
+Victoria and New South Wales are responsible for the production of most tertiary graduates in Australia.
+</p>
   <h2>Standardised Numbers of Tertiary Qualifications across Australia</h2>
   <div id="aus_map"></div>
-
+  <p>
+When standardised by population however, the amount of tertiary qualififcations is more evenly spread around Australia with the Australian Capital Territory having the most postgraduate degrees per 10k population
+</p>
 <script type="text/javascript">
 
   var spec = "https://raw.githubusercontent.com/jcom0004/FIT3179/main/aus_map.json";
